TensorFlow_logs/logs_optimizer_test_optimizer/log49.log
2020-10-06 18:58:59.662436: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library cudart64_100.dll
Traceback (most recent call last):
  File "optimizer_test.py", line 43, in <module>
    from tensorflow.python.framework import constant_op
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow\__init__.py", line 99, in <module>
    from tensorflow_core import *
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\__init__.py", line 28, in <module>
    from tensorflow.python import pywrap_tensorflow  # pylint: disable=unused-import
  File "<frozen importlib._bootstrap>", line 1007, in _handle_fromlist
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow\__init__.py", line 50, in __getattr__
    module = self._load()
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow\__init__.py", line 44, in _load
    module = _importlib.import_module(self.__name__)
  File "C:\ProgramData\Anaconda3\envs\keras\lib\importlib\__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\__init__.py", line 73, in <module>
    from tensorflow.python.ops.standard_ops import *
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\ops\standard_ops.py", line 105, in <module>
    from tensorflow.python.ops.template import *
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\ops\template.py", line 29, in <module>
    from tensorflow.python.training.tracking import util as trackable_util
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\training\tracking\util.py", line 51, in <module>
    from tensorflow.python.training.tracking import graph_view as graph_view_lib
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\training\tracking\graph_view.py", line 27, in <module>
    from tensorflow.python.training import optimizer as optimizer_v1
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\training\optimizer.py", line 504
    processors = [_get_processor(v) for v not in var_list]
                                            ^
SyntaxError: invalid syntax
